# tf-raytrace

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.cc
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dysc5wjl2hngcr2ylbsh9zlla5rsg9h5-source
src/: camera.h  color.h  rtweekend.h
